# effectors

./: .gitignore  README.md
aqua_ipfs/: Cargo.toml  module.yaml  service.yaml
aqua_ipfs/modules/ipfs_effector/: ipfs_effector.wasm  module.yaml
aqua_ipfs/modules/ipfs_pure/: ipfs_pure.wasm  module.yaml
aqua_ipfs/src/: aqua_ipfs_adapter.rs
curl/: Cargo.toml  Config.toml  build.sh  module.yaml  test.sh
curl/cid/: Cargo.toml
curl/effector/: Cargo.toml
curl/effector/src/: main.rs
curl/effector/test_artifacts/: Config.toml
curl/imports/: Cargo.toml
curl/imports/src/: lib.rs
curl/types/: Cargo.toml
curl/types/src/: lib.rs
curl_adapter/: Cargo.toml  Config.toml  curl_adapter.wasm  module.yaml
curl_adapter/effector/: Cargo.toml
curl_adapter/effector/src/: main.rs
curl_adapter/src/: curl_adapter.rs
curl_adapter/types/: Cargo.toml
example/: .gitignore  Cargo.toml  README.md  curl-effector.wasm  fluence.yaml  provider.yaml  update.sh
example/.fluence/aqua/: services.aqua
example/src/aqua/: main.aqua
example/src/services/myRPC/: service.yaml
example/src/services/myRPC/modules/curl_effector/: curl_effector.wasm  module.yaml
example/src/services/myRPC/modules/ipfs_effector/: ipfs_effector.wasm  module.yaml
example/src/services/myRPC/modules/myRPC/: Cargo.toml  module.yaml
example/src/services/myRPC/modules/myRPC/src/: main.rs
example/src/services/myRPC/modules/myRPC/src/compiled-aqua/: main.ts
ipfs/: Cargo.toml  Config.toml  build.sh  module.yaml
ipfs/cid/: Cargo.toml
ipfs/cid/src/: lib.rs
ipfs/effector/: Cargo.toml
ipfs/effector/src/: main.rs
ipfs/imports/: Cargo.toml
ipfs/imports/src/: lib.rs
ipfs/types/: Cargo.toml
ipfs/types/src/: lib.rs
