[workspace]
resolver = "2"
members = [
	"effector",
	"types",
	"cid"
]
[workspace.dependencies]
curl-effector-types = { path = "types" }
curl-effector = { path = "effector" }
curl-cid = { path = "cid" }

marine-rs-sdk = { version = "0.14.0", features = ["logger"] }
marine-rs-sdk-test = "0.16.0"

eyre = "0.6.12"
