[workspace]
resolver = "2"
members = [
	"effector",
	"types",
	"cid",
	"imports",
]
[workspace.dependencies]
ipfs-effector-types = { path = "types" }
ipfs_effector = { path = "effector" }
ipfs-cid = { path = "cid" }

marine-rs-sdk = { version = "0.13.0", features = ["logger"] }
marine-rs-sdk-test = "0.15.0"

eyre = "0.6.12"
