[workspace]
resolver = "2"
members = [ "effector", "types", "cid", "imports", "" ]

  [workspace.dependencies]
  marine-rs-sdk-test = "0.16.1"
  eyre = "0.6.12"

    [workspace.dependencies.ipfs-effector-types]
    path = "types"

    [workspace.dependencies.ipfs_effector]
    path = "effector"

    [workspace.dependencies.ipfs-cid]
    path = "cid"

    [workspace.dependencies.marine-rs-sdk]
    version = "0.14.0"
    features = [ "logger" ]
