[package]
name = "curl_effector"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
eyre = { workspace = true }
itertools = "0.12.1"
log = "0.4.20"
marine-rs-sdk = { workspace = true }
curl-effector-types = { workspace = true }

[dev-dependencies]
marine-rs-sdk-test = { workspace = true }
mockito = "1.1.0"
env_logger = "0.10.0"
tempdir = "0.3.7"
