[package]
name = "myRPC"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "myRPC"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.14.0", features = ["logger"] }
curl-effector-imports = { workspace = true }
ipfs-effector-imports = { workspace = true }

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
